--- a/index_a.htm
+++ b/index_a.htm
@@ -40,6 +40,8 @@
                 <option value="C">電子１</option>
 				<option value="D">電子２</option>
 				<option value="E">金融股</option>
+				<option value="F">航運股</option>
+				<option value="Z">美股</option>
                 <option value="7">10'm</option>
                 <option value="10">30'm</option>
             </select></span>
@@ -67,13 +69,14 @@
       </thead>
       <tr>
       <td colspan="3" style="width:100%">
-          <div id="hiddenMsg1">
-          </div>
+        <div id="hiddenMsg1">
           <div style="display:flex">	  
-          <div id="hiddenElement1">
-          </div>
-          <div id="hiddenElement2">
-
+              <div id="hiddenElement1">
+              </div>
+              <div id="hiddenElement2">
+              </div>
+              <div id="collapseBtn"><img src="collapse.png" style="cursor:pointer;" onclick="collapseElement()" />
+              </div>
           </div>
         </div>
       </td>  
